<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/task_card"
    android:layout_width="match_parent"
    android:layout_height="72dp"
    android:layout_marginStart="12dp"
    android:layout_marginTop="4dp"
    android:layout_marginEnd="12dp"
    android:layout_marginBottom="4dp"
    android:elevation="0dp"
    app:cardCornerRadius="32dp"
    app:strokeColor="?colorPrimary"
    app:strokeWidth="1dp"
    tools:context=".MainActivity"
    tools:showIn="@layout/fragment_tasks">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/task_one_time_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tasks_one_time"
            android:textAppearance="@style/Typo.LabelMedium"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:visibility="visible" />

        <TextView
            android:id="@+id/task_name_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="2"
            android:paddingStart="8dp"
            android:paddingEnd="4dp"
            android:singleLine="false"
            android:textAppearance="?textAppearanceBodyMedium"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/task_days_remaining_text"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="escombrar tot el pis sencer" />

        <TextView
            android:id="@+id/task_days_remaining_text"
            android:layout_width="48dp"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:paddingStart="0dp"
            android:paddingEnd="4dp"
            android:textAppearance="?textAppearanceBodyMedium"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/task_edit_button"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="5" />

        <Button
            android:id="@+id/task_edit_button"
            style="?attr/materialIconButtonStyle"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:contentDescription="@string/tasks_edit"
            app:icon="@drawable/baseline_edit_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/task_mark_as_done_button"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/task_mark_as_done_button"
            style="?attr/materialIconButtonStyle"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:contentDescription="@string/tasks_mark_as_done"
            app:icon="@drawable/baseline_check_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>