...
    android:id="@+id/nav_graph"
    app:startDestination="@id/tasks_destination">

    <fragment
        android:id="@+id/tasks_destination"
        android:name="com.carles.lallorigueraviews.ui.fragments.TasksFragment"
        android:label="@string/tasks_title"
        tools:layout="@layout/fragment_tasks">

        <action
            android:id="@+id/toNewTask"
            app:destination="@id/new_task_destination"
            app:enterAnim="@anim/slide_in_from_right_to_left"
...
        android:label="@string/new_task_title"
        tools:layout="@layout/fragment_new_task" />

    <fragment
        android:id="@+id/edit_task_destination"
        android:name="com.carles.lallorigueraviews.ui.fragments.EditTaskFragment"
        android:label="@string/edit_task_title"
        tools:layout="@layout/fragment_edit_task">
        <argument
            android:name="extraTaskId"
            app:argType="string" />
    </fragment>

...
